[package]
name = "dust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
crossterm = "0.26.1"

[dependencies]
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2.84"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"
wasm-pack = "0.13.0"

[[bin]]
name = "dust"
path = "src/main.rs"
